log/build_2024-07-10_11-26-07/semnav/stdout_stderr.log
[ 14%] Built target reactive_planner
[ 23%] Building CXX object CMakeFiles/navigation.dir/src/navigation.cpp.o
[ 23%] Building CXX object CMakeFiles/navigation_semantic.dir/src/navigation_semantic.cpp.o
/home/neha/ros2_ws/src/semnav_migration/src/navigation_semantic.cpp: In member function ‘void SemanticNavigationNode::control_callback(const sensor_msgs::msg::LaserScan_<std::allocator<void> >::ConstPtr&, const nav_msgs::msg::Odometry_<std::allocator<void> >::ConstPtr&)’:
/home/neha/ros2_ws/src/semnav_migration/src/navigation_semantic.cpp:457:42: error: could not convert ‘& lidar_data’ from ‘const sensor_msgs::msg::LaserScan_<std::allocator<void> >::ConstPtr*’ {aka ‘const std::shared_ptr<const sensor_msgs::msg::LaserScan_<std::allocator<void> > >*’} to ‘sensor_msgs::msg::LaserScan_<std::allocator<void> >::SharedPtr’ {aka ‘std::shared_ptr<sensor_msgs::msg::LaserScan_<std::allocator<void> > >’}
  457 |                         constructLIDAR2D(&lidar_data, CutoffRange_, AllowableRange_, RobotPitch_, &LIDAR);
      |                                          ^~~~~~~~~~~
      |                                          |
      |                                          const sensor_msgs::msg::LaserScan_<std::allocator<void> >::ConstPtr* {aka const std::shared_ptr<const sensor_msgs::msg::LaserScan_<std::allocator<void> > >*}
/home/neha/ros2_ws/src/semnav_migration/src/navigation.cpp: In member function ‘void NavigationNode::control_callback(const sensor_msgs::msg::LaserScan_<std::allocator<void> >::ConstPtr&, const nav_msgs::msg::Odometry_<std::allocator<void> >::ConstPtr&)’:
/home/neha/ros2_ws/src/semnav_migration/src/navigation.cpp:421:42: error: could not convert ‘lidar_data’ from ‘shared_ptr<LaserScan_<[...]>>’ to ‘shared_ptr<LaserScan_<[...]>>’
  421 |                         constructLIDAR2D(lidar_data, CutoffRange_, AllowableRange_, RobotPitch_, &LIDAR);
      |                                          ^~~~~~~~~~
      |                                          |
      |                                          shared_ptr<LaserScan_<[...]>>
gmake[2]: *** [CMakeFiles/navigation_semantic.dir/build.make:76: CMakeFiles/navigation_semantic.dir/src/navigation_semantic.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:207: CMakeFiles/navigation_semantic.dir/all] Error 2
gmake[1]: *** Waiting for unfinished jobs....
gmake[2]: *** [CMakeFiles/navigation.dir/build.make:76: CMakeFiles/navigation.dir/src/navigation.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:181: CMakeFiles/navigation.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
